--- a/YourOwnGame/app/src/main/AndroidManifest.xml
+++ b/YourOwnGame/app/src/main/AndroidManifest.xml
@@ -9,21 +9,22 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".activities.MainActivity"/>
+        <activity android:name=".activities.GameViewActivity"/>
 
-
-        <activity android:name=".Activities.MainActivity">
+        <!-- screenOrientation and configChanges so only portrait mode -->
+        <activity android:name=".activities.LoadingActivity"
+            android:noHistory="true"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait"
+            android:theme="@style/SplashTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+                <action android:name="android.intent.action.VIEW" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-
-        <activity android:name=".Activities.GameViewActivity">
-
-
-        </activity>
-
     </application>
+
 </manifest>
