--- a/YourOwnGame/app/src/main/AndroidManifest.xml
+++ b/YourOwnGame/app/src/main/AndroidManifest.xml
@@ -14,19 +14,8 @@
         <activity
             android:name=".activities.MainActivity"
             android:configChanges="keyboardHidden|orientation"
-            android:screenOrientation="sensorLandscape" />
-        <activity
-            android:name=".activities.GameViewActivity"
-            android:configChanges="keyboardHidden|orientation"
-            android:screenOrientation="sensorLandscape" />
-
-        <!-- screenOrientation and configChanges so only portrait mode -->
-        <activity
-            android:name=".activities.LoadingActivity"
-            android:configChanges="keyboardHidden|orientation"
-            android:noHistory="true"
-            android:screenOrientation="sensorLandscape"
-            android:theme="@style/SplashTheme">
+            android:theme="@style/SplashTheme"
+            android:screenOrientation="sensorLandscape">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <action android:name="android.intent.action.VIEW" />
@@ -34,7 +23,17 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activities.CreditActivity"></activity>
+        <activity
+            android:name=".activities.GameViewActivity"
+            android:theme="@style/SplashTheme"
+            android:configChanges="keyboardHidden|orientation"
+            android:screenOrientation="sensorLandscape" />
+
+        <!-- screenOrientation and configChanges so only portrait mode -->
+        <activity android:name=".activities.CreditActivity"
+            android:theme="@style/SplashTheme"
+            android:configChanges="keyboardHidden|orientation"
+            android:screenOrientation="sensorLandscape"/>
     </application>
 
 </manifest>
