--- a/YourOwnGame/app/build.gradle
+++ b/YourOwnGame/app/build.gradle
@@ -16,17 +16,17 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-
     //this creates resource string while compiling with current versionName! (e.g. Loading screen)
     applicationVariants.all {
         variant ->
             variant.resValue "string", "versionName", variant.versionName
     }
+    buildToolsVersion '27.0.3'
 }
 
 dependencies {
     compile 'com.google.android.gms:play-services-ads:11.8.0'
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:27.0.2'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     implementation 'com.android.support:support-v4:27.0.2'
