--- a/YourOwnGame/app/src/main/AndroidManifest.xml
+++ b/YourOwnGame/app/src/main/AndroidManifest.xml
@@ -29,13 +29,17 @@
             android:screenOrientation="sensorLandscape"
             android:theme="@style/SplashTheme" />
 
-        <!-- screenOrientation and configChanges so only portrait mode -->
+        <!-- screenOrientation and configChanges so only landscape mode -->
         <activity
             android:name=".activities.CreditActivity"
             android:configChanges="keyboardHidden|orientation"
             android:screenOrientation="sensorLandscape"
             android:theme="@style/SplashTheme" />
-        <activity android:name=".activities.HighscoreActivity"></activity>
+        <activity
+            android:name=".activities.HighscoreActivity"
+            android:configChanges="keyboardHidden|orientation"
+            android:screenOrientation="sensorLandscape"
+            android:theme="@style/SplashTheme"/>
     </application>
 
 </manifest>
