--- a/YourOwnGame/app/build.gradle
+++ b/YourOwnGame/app/build.gradle
@@ -24,7 +24,17 @@ android {
     buildToolsVersion '27.0.3'
 }
 
+apply plugin: 'org.greenrobot.greendao'
+
+/* Database Schema version (increment if structure changed)*/
+greendao {
+    schemaVersion 1
+}
+
 dependencies {
+    /*Android ORM*/
+    implementation 'org.greenrobot:greendao:3.2.2'
+
     implementation 'com.android.support:design:27.1.1'
     compile 'com.google.android.gms:play-services-ads:15.0.0'
     implementation fileTree(include: ['*.jar'], dir: 'libs')
