--- a/YourOwnGame/app/build.gradle
+++ b/YourOwnGame/app/build.gradle
@@ -3,16 +3,18 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 27
     defaultConfig {
-        applicationId "yourowngame.com.yourowngame"
+        applicationId "solution_wsdt.com.yourowngame"
         minSdkVersion 16
         targetSdkVersion 27
         versionCode 1
-        versionName "0.0.1" /* {major changes}.{minor changes}.{bug fixes} */
+        versionName "0.0.1" /* Auch mehrstellig: {major changes}.{minor changes}.{bug fixes} */
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
         release {
-            minifyEnabled false
+            /* Making the app smaller, but could be also the source of errors!! */
+            shrinkResources true /* shrinks unused res (drawables, etc.)*/
+            minifyEnabled true /* same as shrinkResources but for code itself*/
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
@@ -22,6 +24,23 @@ android {
             variant.resValue "string", "versionName", variant.versionName
     }
     buildToolsVersion '27.0.3'
+
+    /* Product Flavours (building paid/free versions) */
+    flavorDimensions "dim"
+    productFlavors {
+        free {
+            applicationIdSuffix ".free"
+            versionNameSuffix "-f"
+            dimension "dim"
+            buildConfigField "boolean", "PAID_VERSION", "false" /* create java vars, so we can react at runtime */
+        }
+        paid {
+            applicationIdSuffix ".paid"
+            versionNameSuffix "-p"
+            dimension "dim"
+            buildConfigField "boolean", "PAID_VERSION", "true"
+        }
+    }
 }
 
 apply plugin: 'org.greenrobot.greendao'
@@ -42,7 +61,7 @@ dependencies {
     implementation 'com.android.support.constraint:constraint-layout:1.1.0'
     implementation 'com.android.support:support-v4:27.1.1'
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.1'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+    androidTestImplementation 'com.android.support.test:runner:1.0.2'
+    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.android.support:gridlayout-v7:27.1.1'
 }
