--- a/YourOwnGame/app/src/main/AndroidManifest.xml
+++ b/YourOwnGame/app/src/main/AndroidManifest.xml
@@ -39,7 +39,13 @@
             android:name=".activities.HighscoreActivity"
             android:configChanges="keyboardHidden|orientation"
             android:screenOrientation="sensorLandscape"
-            android:theme="@style/SplashTheme"/>
+            android:theme="@style/SplashTheme" />
+        <activity
+            android:name=".activities.LevelHierarchyActivity"
+            android:configChanges="keyboardHidden|orientation"
+            android:screenOrientation="sensorLandscape"
+            android:theme="@style/SplashTheme">
+        </activity>
     </application>
 
 </manifest>
