--- a/YourOwnGame/app/src/main/AndroidManifest.xml
+++ b/YourOwnGame/app/src/main/AndroidManifest.xml
@@ -41,6 +41,7 @@
         <activity
             android:name=".activities.LevelHierarchyActivity"
             android:configChanges="keyboardHidden|orientation"
+            android:noHistory="true"
             android:screenOrientation="sensorLandscape"
             android:theme="@style/SplashTheme">
         </activity>
