--- a/YourOwnGame/app/src/main/AndroidManifest.xml
+++ b/YourOwnGame/app/src/main/AndroidManifest.xml
@@ -43,8 +43,12 @@
             android:configChanges="keyboardHidden|orientation"
             android:noHistory="true"
             android:screenOrientation="sensorLandscape"
-            android:theme="@style/SplashTheme"></activity>
-        <activity android:name=".activities.SwipeFruitsActivity"></activity>
+            android:theme="@style/SplashTheme" />
+        <activity android:name=".activities.SwipeFruitsActivity" />
+        <activity
+            android:name=".activities.ShopActivity"
+            android:label="@string/title_activity_shop"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
 </manifest>
