--- a/YourOwnGame/app/src/main/AndroidManifest.xml
+++ b/YourOwnGame/app/src/main/AndroidManifest.xml
@@ -7,9 +7,9 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/app_icon_gameboy"
+        android:icon="@mipmap/ic_launcher"
+        android:roundIcon="@mipmap/ic_launcher_round"
         android:label="@string/appName"
-        android:roundIcon="@drawable/app_icon_gameboy"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:replace="android:label">
