--- a/YourOwnGame/app/build.gradle
+++ b/YourOwnGame/app/build.gradle
@@ -54,8 +54,9 @@ android {
 dependencies {
     /* FIREBASE */
     implementation 'com.google.firebase:firebase-core:15.0.2'
-    /* Pager Sliding (TabbedActivity) */
-    //implementation 'com.jpardogo.materialtabstrip:library:1.1.1'
+    /* Dialogues */
+    implementation 'com.yarolegovich:lovely-dialog:1.1.0'
+
     implementation 'com.android.support:design:27.1.1'
     implementation 'com.google.android.gms:play-services-ads:15.0.1'
     implementation fileTree(include: ['*.jar'], dir: 'libs')
