--- a/YourOwnGame/app/build.gradle
+++ b/YourOwnGame/app/build.gradle
@@ -58,6 +58,9 @@ dependencies {
     implementation 'com.yarolegovich:lovely-dialog:1.1.0'
 
     implementation 'com.android.support:design:27.1.1'
+
+    /* Play services */
+    //implementation 'com.google.android.gms:play-services-games:15.0.1'
     implementation 'com.google.android.gms:play-services-ads:15.0.1'
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:27.1.1'
