--- a/YourOwnGame/app/src/main/AndroidManifest.xml
+++ b/YourOwnGame/app/src/main/AndroidManifest.xml
@@ -7,8 +7,8 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:icon="@mipmap/launcher_meloon"
+        android:roundIcon="@mipmap/launcher_meloon"
         android:label="@string/appName"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
