--- a/YourOwnGame/app/build.gradle
+++ b/YourOwnGame/app/build.gradle
@@ -53,7 +53,7 @@ android {
 
 dependencies {
     /* FIREBASE */
-    implementation 'com.google.firebase:firebase-core:15.0.2'
+    implementation 'com.google.firebase:firebase-core:16.0.0'
     /* Dialogues */
     implementation 'com.yarolegovich:lovely-dialog:1.1.0'
 
@@ -66,10 +66,14 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation 'com.android.support.constraint:constraint-layout:1.1.0'
     implementation 'com.android.support:support-v4:27.1.1'
+    implementation 'com.android.support:gridlayout-v7:27.1.1'
+
+    //TESTs
     testImplementation 'junit:junit:4.12'
+    testImplementation 'org.mockito:mockito-core:1.10.19'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-    implementation 'com.android.support:gridlayout-v7:27.1.1'
+
 }
 
 apply plugin: 'com.google.gms.google-services'
