created a "little World" with 4 + 1 levels, last one is a bonuslevel. dont take this to serious, i just wanted to show what we're intending to do. codeparts are horrible, enjoy
Also the GUI is more like a piece of catshit, resolutions dont match,
lots of things to do better. dont take that push too serious haha

--- a/YourOwnGame/app/build.gradle
+++ b/YourOwnGame/app/build.gradle
@@ -59,6 +59,10 @@ dependencies {
 
     implementation 'com.android.support:design:27.1.1'
 
+    //TODO is it allowed to use other libraries in an commercial project?
+    /* recyclerview*/
+    implementation "com.android.support:recyclerview-v7:27.1.1"
+
     /* Play services */
     //implementation 'com.google.android.gms:play-services-games:15.0.1'
     implementation 'com.google.android.gms:play-services-ads:15.0.1'
