--- a/YourOwnGame/app/src/main/AndroidManifest.xml
+++ b/YourOwnGame/app/src/main/AndroidManifest.xml
@@ -8,8 +8,8 @@
     <application
         android:allowBackup="true"
         android:icon="@mipmap/launcher_meloon"
-        android:roundIcon="@mipmap/launcher_meloon"
         android:label="@string/appName"
+        android:roundIcon="@mipmap/launcher_meloon"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:replace="android:label">
@@ -45,6 +45,7 @@
             android:screenOrientation="sensorLandscape"
             android:theme="@style/SplashTheme" />
         <activity android:name=".activities.SwipeFruitsActivity" />
+        <activity android:name=".activities.GameLevelHorizontalActivity"></activity>
     </application>
 
 </manifest>
