--- a/YourOwnGame/app/src/main/AndroidManifest.xml
+++ b/YourOwnGame/app/src/main/AndroidManifest.xml
@@ -45,7 +45,11 @@
             android:screenOrientation="sensorLandscape"
             android:theme="@style/SplashTheme" />
         <activity android:name=".activities.SwipeFruitsActivity" />
-        <activity android:name=".activities.GameLevelHorizontalActivity"></activity>
+        <activity android:name=".activities.GameLevelHorizontalActivity"
+            android:configChanges="keyboardHidden|orientation"
+            android:noHistory="true"
+            android:screenOrientation="sensorLandscape"
+            android:theme="@style/SplashTheme" />
     </application>
 
 </manifest>
