--- a/YourOwnGame/app/build.gradle
+++ b/YourOwnGame/app/build.gradle
@@ -74,6 +74,7 @@ dependencies {
     implementation 'com.android.support:gridlayout-v7:27.1.1'
 
     //TESTs
+    implementation 'com.android.support.constraint:constraint-layout:1.1.2'
     testImplementation 'junit:junit:4.12'
     testImplementation 'org.mockito:mockito-core:1.10.19'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
