--- a/YourOwnGame/app/src/main/AndroidManifest.xml
+++ b/YourOwnGame/app/src/main/AndroidManifest.xml
@@ -45,11 +45,14 @@
             android:screenOrientation="sensorLandscape"
             android:theme="@style/SplashTheme" />
         <activity android:name=".activities.SwipeFruitsActivity" />
-        <activity android:name=".activities.GameLevelHorizontalActivity"
+        <activity
+            android:name=".activities.GameLevelHorizontalActivity"
             android:configChanges="keyboardHidden|orientation"
             android:noHistory="true"
             android:screenOrientation="sensorLandscape"
             android:theme="@style/SplashTheme" />
+        <activity android:name=".activities.WorldActivity" />
+        <activity android:name=".activities.DrawableSurfaceActivity"></activity>
     </application>
 
 </manifest>
