--- a/YourOwnGame/app/src/main/AndroidManifest.xml
+++ b/YourOwnGame/app/src/main/AndroidManifest.xml
@@ -51,8 +51,10 @@
             android:noHistory="true"
             android:screenOrientation="sensorLandscape"
             android:theme="@style/SplashTheme" />
-        <activity android:name=".activities.WorldActivity" />
-        <activity android:name=".activities.DrawableSurfaceActivity"></activity>
+        <activity android:name=".activities.WorldActivity"
+            android:configChanges="keyboardHidden|orientation"
+            android:noHistory="true"
+            android:screenOrientation="sensorLandscape"/>
     </application>
 
 </manifest>
