--- a/YourOwnGame/app/src/main/AndroidManifest.xml
+++ b/YourOwnGame/app/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
+        android:name=".classes.global_configuration.App"
         android:allowBackup="true"
         android:icon="@mipmap/launcher_meloon"
         android:label="@string/appName"
