--- a/YourOwnGame/app/build.gradle
+++ b/YourOwnGame/app/build.gradle
@@ -54,7 +54,7 @@ android {
 
 dependencies {
     /* FIREBASE */
-    //implementation 'com.google.firebase:firebase-core:16.0.0'
+    implementation 'com.google.firebase:firebase-core:16.0.3'
     /* Dialogues */
     implementation 'com.yarolegovich:lovely-dialog:1.1.0'
 
@@ -74,12 +74,13 @@ dependencies {
     implementation 'com.android.support:gridlayout-v7:27.1.1'
 
     //TESTs
-    implementation 'com.android.support.constraint:constraint-layout:1.1.2'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     testImplementation 'junit:junit:4.12'
-    testImplementation 'org.mockito:mockito-core:1.10.19'
+    testImplementation 'org.mockito:mockito-core:2.15.0'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
+    //androidTestImplementation 'org.junit.jupiter:junit-jupiter-api'
 }
 
 apply plugin: 'com.google.gms.google-services'
